--- a/yoldi-profile/src/app/auth/auth-styles.css
+++ b/yoldi-profile/src/app/auth/auth-styles.css
@@ -1,4 +1,4 @@
-.auth-layout {
+.auth-content {
     background: #fff;
     border-radius: 5px;
     border: 1px solid #E6E6E6;
@@ -7,8 +7,19 @@
     width: 400px;
 }
 
+.auth-layout {
+    background: #F3F3F3;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center
+}
+
 @media (max-width: 768px) {
     .auth-layout {
+        background: #FFF;
+    }
+    .auth-content {
         border: none;
         width: 100%;
     }
