--- a/yoldi-profile/src/app/globals.css
+++ b/yoldi-profile/src/app/globals.css
@@ -3,17 +3,72 @@ body {
     max-width: 100vw;
     overflow-x: hidden;
     margin: 0;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 25.6px;
 }
-.base-layout-container {
-    background: #F3F3F3;
+
+.ant-modal-content {
+    padding: 30px !important;
+    border-radius: 5px !important;
+}
+
+.ant-form-item-label {
+    text-align: left !important;
+    color: #838383 !important;
+    font-weight: 500 !important;
+}
+
+.ant-form-item {
+    margin-bottom: 10px !important;
+}
+
+
+.ant-input-group-wrapper {
+    height: auto !important;
+}
+
+.ant-form-item-label .ant-form-item-required {
+    color: #838383 !important;
+    font-weight: 500 !important;
+    font-size: 16px !important;
+}
+
+.ant-form-item-label .ant-form-item-required::before {
+    content: "" !important;
+}
+
+.ant-form-item-label .ant-form-item-required::after {
+    content: "" !important;
+}
+
+.ant-form-item-row {
+    display: block !important;
 }
 
 @media (max-width: 768px) {
-    .base-layout-container {
-        background: #FFF;
-    }
-
     .header-text {
         display: none;
     }
+}
+
+
+/* width */
+::-webkit-scrollbar {
+    width: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
 }
